fix: modal height on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -1176,7 +1176,7 @@ section.bg-secondary {
     max-height: 100%;
     /* overflow-y: scroll; */
     width: 80%;
-    height: 70%;
+    height: 80%;
   }
 
   .modal-content {
